--- a/config/tsconfig.cjs.json
+++ b/config/tsconfig.cjs.json
@@ -2,6 +2,6 @@
   "extends": "./tsconfig.base",
   "compilerOptions": {
     "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
-    "outDir": "../cjs" /* Redirect output structure to the directory. */
+    "outDir": "../dist/cjs" /* Redirect output structure to the directory. */
   }
 }
