--- a/config/tsconfig.esm.json
+++ b/config/tsconfig.esm.json
@@ -2,6 +2,6 @@
   "extends": "./tsconfig.base",
   "compilerOptions": {
     "module": "ESNext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
-    "outDir": "../esm" /* Redirect output structure to the directory. */
+    "outDir": "../dist/esm" /* Redirect output structure to the directory. */
   }
 }
