--- a/config/tsconfig.types.json
+++ b/config/tsconfig.types.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "emitDeclarationOnly": true,
-    "outDir": "../types" /* Redirect output structure to the directory. */
+    "outDir": "../dist/types" /* Redirect output structure to the directory. */
   }
 }
