--- a/package.json
+++ b/package.json
@@ -1,30 +1,41 @@
 {
   "name": "example-typescript-package",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "cjs/index.js",
-  "module": "esm/index.js",
-  "umd:main": "umd/index.js",
-  "types": "types/index.d.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "umd:main": "dist/umd/index.js",
+  "types": "dist/types/index.d.js",
   "scripts": {
-    "build": "yarn run build:cjs && yarn run build:esm && yarn run build:umd && yarn run build:types",
+    "build": "npm run build:cjs && npm run build:esm && npm run build:umd && npm run build:types",
     "build:cjs": "node cleanup cjs && tsc -p config/tsconfig.cjs.json",
     "build:esm": "node cleanup esm && tsc -p config/tsconfig.esm.json",
     "build:umd": "node cleanup umd && webpack --config config/webpack.config.js",
     "build:types": "node cleanup types && tsc -p config/tsconfig.types.json",
     "clean": "node cleanup",
-    "test": "jest"
+    "package": "npm run build && npm pack",
+    "test": "jest",
+    "test:cov": "jest --coverage"
   },
   "publishConfig": {
     "access": "public"
   },
   "files": [
+    "dist"
+  ],
+  "keywords": [
+    "example",
+    "typescript",
+    "npm",
+    "package",
+    "sample",
+    "boilerplate",
+    "starter",
+    "demo",
     "cjs",
     "esm",
-    "umd",
-    "types"
+    "umd"
   ],
-  "keywords": [],
   "author": "Tom Chen <tomchen.org@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/tomchen/example-typescript-package",
