--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   "types": "dist/types/index.d.js",
   "scripts": {
     "build": "npm run build:cjs && npm run build:esm && npm run build:umd && npm run build:types",
-    "build:cjs": "node utils/cleanup cjs && tsc -p config/tsconfig.cjs.json",
-    "build:esm": "node utils/cleanup esm && tsc -p config/tsconfig.esm.json",
-    "build:umd": "node utils/cleanup umd && webpack --config config/webpack.config.js",
-    "build:types": "node utils/cleanup types && tsc -p config/tsconfig.types.json",
-    "clean": "node utils/cleanup",
+    "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
+    "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
+    "build:umd": "node tools/cleanup umd && webpack --config config/webpack.config.js",
+    "build:types": "node tools/cleanup types && tsc -p config/tsconfig.types.json",
+    "clean": "node tools/cleanup",
     "package": "npm run build && npm pack",
     "test": "jest",
     "test:cov": "jest --coverage",
-    "addscope": "node utils/packagejson name @tomchen/example-typescript-package && prettier --write package.json"
+    "addscope": "node tools/packagejson name @tomchen/example-typescript-package && prettier --write package.json"
   },
   "publishConfig": {
     "access": "public"
