--- a/config/tsconfig.esm.json
+++ b/config/tsconfig.esm.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.base",
+  "extends": "../tsconfig",
   "compilerOptions": {
     "module": "ESNext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
     "outDir": "../dist/esm" /* Redirect output structure to the directory. */
