--- a/config/tsconfig.umd.json
+++ b/config/tsconfig.umd.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.base",
+  "extends": "../tsconfig",
   "compilerOptions": {
     "module": "commonjs" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
     "declaration": false /* Generates corresponding '.d.ts' file. */
