--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,16 +11,14 @@ on:
       - master
 
 jobs:
-  build:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
-      max-parallel: 4
       matrix:
         os:
           - ubuntu-latest
-          - macos-latest
           - windows-latest
-        node: [10.x, 12.x, 14.x]
+        node: [10.x, 12.x, 14.x, 15.x]
 
     steps:
       - uses: actions/checkout@v2
