--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
         os:
           - ubuntu-latest
           - windows-latest
-        node: [10.x, 12.x, 14.x, 15.x]
+        node: [12.x, 14.x, 16.x]
 
     steps:
       - uses: actions/checkout@v2
